# boost-asio

./: .gitignore  LICENSE  LICENSE.md  README.md  TODO.md  build.cmd  build.sh  link.txt  make.cmd  make.sh
doc/figures/: asynchrounous.dia  asynchrounous.dia~  synchrounous.dia~
projects/allocation/: server.ccp
projects/asynchronous/src/: CMakeLists.txt
projects/asynchronous/src/client/: CMakeLists.txt  client.cc  client.h  conf.cc  conf.h  main.cc  session.cc  session.h
projects/asynchronous/src/server/: conf.cc  conf.h  main.cc  server.cc  server.h  session.cc  session.h
projects/serialization/: client.cpp  connection.hpp  server.cpp  stock.hpp
projects/synchronous/src/: CMakeLists.txt
projects/synchronous/src/client/: CMakeLists.txt  client.cc  client.h  conf.h  main.cc  session.cc  session.h
projects/synchronous/src/server/: CMakeLists.txt  conf.cc  conf.h  main.cc  server.cc  server.h  session.cc  session.h
src/: CMakeLists.txt  main.cc
src/Client/: CMakeLists.txt  main.cc
src/Client/header_files/: talk_to_server.h
src/Client/source_files/: talk_to_server.cc
src/header_files/: server.h  setting.h  talk_to_client.h
src/source_files/: server.cc  talk_to_client.cc
src/test_files/: CMakeLists.txt  myclass_test.cpp
